Add pull ingredients list from site to chrome

--- a/src/popup.html
+++ b/src/popup.html
@@ -26,7 +26,10 @@
         cursor: pointer;
       }
     </style>
-
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
     <script src="js/popup.js"></script>
   </head>
 
@@ -38,6 +41,11 @@
       <button class="start">
         Add Recipe
       </button>
+      <br>
+      <h1> Ingredients List </h1>
+      <ul class="list">
+
+      </ul>
     </div>
   </body>
 </html>
